# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  vcpkg.json
.github/workflows/: build-test.yaml  build.yaml
config/: config-generic.sh  config-mac.sh
src/: InputHandler.cpp  InputHandler.hpp  SDLException.cpp  SDLException.hpp  TextEditor.cpp  TextEditor.hpp  main.cpp
